# CPP_23_VSCODE

./: .gitignore  .root  CMakeLists.txt  conanfile.py  readme.md  requirements.txt  tasks.py
_docs/: MSBuildTools_Install_Guide.md  WSL2_Install_Guide.md  linux_depedencies.md  windows_depedencies.md
profiles/: linux_host  windows_host
src/example/: CMakeLists.txt  main.cpp
src/example/modules/: hello.cpp  hello.ixx
